Fix CSS rule wrapping

--- a/src/css/molecules/card-event.scss
+++ b/src/css/molecules/card-event.scss
@@ -108,7 +108,8 @@
     border: 14px solid $color-black;
     border-bottom-color: transparent;
     border-left-color: transparent;
-    border-top-color: transparent;bottom: -14px;
+    border-top-color: transparent;
+    bottom: -14px;
     content: "";
     display: block;
     height: 0px;
